# joi_delivery

./: CLAUDE.md  pyproject.toml
.claude/agent-memory/code-quality-guardian/: MEMORY.md  project_architecture.md
.claude/agents/: code-quality-guardian.md
src/joi_delivery/controller/: cart_controller.py
src/joi_delivery/domain/: grocery_store.py
src/joi_delivery/generator/: app_initializer.py
src/joi_delivery/my-fastapi-app/: README.md  pyproject.toml  requirements.txt
src/joi_delivery/my-fastapi-app/src/: main.py
src/joi_delivery/my-fastapi-app/src/app/: deps.py
src/joi_delivery/my-fastapi-app/src/app/api/v1/endpoints/: items.py
src/joi_delivery/my-fastapi-app/src/app/core/: config.py
src/joi_delivery/my-fastapi-app/src/app/models/: item.py
src/joi_delivery/my-fastapi-app/src/app/schemas/: item.py
src/joi_delivery/my-fastapi-app/tests/: test_main.py
src/joi_delivery/service/: cart_service.py
